# lend-contracts-soroban

./: .gitignore  Cargo.toml  DEPLOYMENTS.md  Makefile  README.md
.github/workflows/: ci.yml
contracts/dummy-usdc/: Cargo.toml
contracts/dummy-usdc/src/: admin.rs  allowance.rs  balance.rs  contract.rs  events.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/factory/: Cargo.toml  Makefile
contracts/factory/src/: admin.rs  contract.rs  create_oplend.rs  crypto.rs  (+10 more)
contracts/op-lend/: Cargo.toml  Makefile
contracts/op-lend/src/: allowance.rs  balance.rs  contract.rs  crypto.rs  lib.rs  storage_types.rs  test.rs  whitelist.rs
contracts/op-lend/test_snapshots/test/: test.1.json  test_admin_burn.1.json  test_approve_and_allowance.1.json  test_burn_decrements_supply.1.json  test_mint_whitelists_and_tracks_supply.1.json  test_set_admin.1.json  test_supply_cap_enforced.1.json  test_transfer_from_requires_whitelist.1.json  test_transfer_requires_whitelist.1.json  test_transfer_to_non_whitelisted_fails.1.json  test_whitelist_user_bad_signature.1.json  test_whitelist_user_nonce_replay.1.json  test_whitelist_user_with_signature.1.json  test_zero_allowance.1.json  transfer_from_insufficient_allowance.1.json  transfer_insufficient_balance.1.json
contracts/rewards/: Cargo.toml
scripts/: README.md  build-merkle-tree.js  create-operation.sh  deploy-dummy-usdc.sh  deploy-factory.sh  deploy-rewards.sh  deploy.sh  distribute-op-rewards.sh  fund-dummy-usdc.sh  invest-with-proof.sh  invest.sh  merkle.json  recipients.json  start-operation.sh  update-backend-signer.sh
(+19 files in other folders)
