[package]
name = "lend-operation-token"
description = "OpLend port from EVM to Soroban"
version = "0.0.1"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "25.1.0" }
soroban-token-sdk = { version = "25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
